# cpp_fqn_parser

./: README.md  conftest.py  main.py  parser.py  pyproject.toml  requirements.txt  tokenizer.py
.github/workflows/: mypy.yaml  pytest.yaml
src/: __init__.py  fqn.py  parser.py  scope.py  token.py  tokenizer.py
src/cpp_fqn_parser/: __init__.py  fqn.py  parser.py  scope.py  token.py  tokenizer.py  utils.py
test_data/: fqns.json
tests/: conftest.py  test_parser.py  test_tokenizer.py
